--- a/about.html
+++ b/about.html
@@ -3,99 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About City Library</title>
-    <script src="js/tailwind.js"></script>
-    <link rel="stylesheet" href="css/tailwind.min.css">'
-    <script src="js/lucide.min.js"></script>
+    <title>About - City Library</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-50">
-    <header class="px-4 lg:px-6 h-16 flex items-center bg-white shadow-sm">
-        <a href="#" class="flex items-center justify-center">
+    <header class="px-4 lg:px-6 h-14 flex items-center bg-white shadow-sm relative z-10">
+        <a href="index.html" class="flex items-center justify-center gap-2">
             <i data-lucide="book-open" class="h-6 w-6 text-blue-600"></i>
-            <span class="text-2xl font-bold tracking-tighter sm:text-2xl ml-3 -mt-1">City Library</span>
+            <span class="text-2xl font-bold tracking-tighter sm:text-2xl ml-1 -mt-1">City Library</span>
         </a>
-        <nav class="ml-auto flex gap-4 sm:gap-6 hidden lg:flex">
-            <a href="index.html"
-                class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Home</a>
+        <button id="mobile-menu-button" class="ml-auto lg:hidden">
+            <i data-lucide="menu" class="h-6 w-6 text-blue-600"></i>
+        </button>
+        <nav id="desktop-menu" class="hidden lg:flex ml-auto gap-4 sm:gap-6">
+            <a href="index.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Home</a>
             <a href="catalog.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Catalog</a>
             <a href="events.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Events</a>
-            <a href="about.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">About</a>
+            <a href="about.html" class="text-sm font-medium text-blue-600 underline underline-offset-4">About</a>
         </nav>
-        <!-- Mobile Navigation Menu (Hamburger) -->
-        <button class="lg:hidden flex ml-auto" id="mobile-menu-button">
-            <i class="w-6 h-6 text-blue-600">☰</i>
-        </button>
-        <!-- Mobile Menu (Hidden by default) -->
-        <div id="mobile-menu" class="lg:hidden hidden absolute top-14 right-4 bg-white shadow-lg rounded-lg w-48 p-4">
-            <a href="index.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Home</a>
-            <a href="catalog.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Catalog</a>
-            <a href="events.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Events</a>
-            <a href="about.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">About</a>
-        </div>
     </header>
+
+    <div id="mobile-menu" class="lg:hidden bg-white shadow-md absolute top-14 left-0 right-0 z-20 hidden">
+        <nav class="flex flex-col p-4">
+            <a href="index.html" class="text-sm font-medium py-2 hover:text-blue-600">Home</a>
+            <a href="catalog.html" class="text-sm font-medium py-2 hover:text-blue-600">Catalog</a>
+            <a href="events.html" class="text-sm font-medium py-2 hover:text-blue-600">Events</a>
+            <a href="about.html" class="text-sm font-medium py-2 text-blue-600">About</a>
+        </nav>
+    </div>
+
     <main class="flex-1">
         <section class="w-full py-12 md:py-24 lg:py-32 bg-gradient-to-r from-blue-500 to-blue-600">
             <div class="container px-4 md:px-6 mx-auto">
                 <h1 class="text-3xl font-bold tracking-tighter sm:text-5xl xl:text-6xl/none text-white text-center">
                     About City Library
                 </h1>
+                <p class="mt-4 text-xl text-blue-100 text-center max-w-[600px] mx-auto">
+                    Serving our community with knowledge and imagination since 1950
+                </p>
             </div>
         </section>
+
         <section class="w-full py-12 md:py-24 lg:py-32 bg-white">
             <div class="container px-4 md:px-6 mx-auto">
-                <div class="grid gap-6 lg:grid-cols-2 lg:gap-12 items-center">
-                    <div class="space-y-4">
-                        <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl text-blue-600">Our Mission</h2>
-                        <p class="text-gray-600 text-lg">
-                            At City Library, our mission is to foster a love for learning, provide access to knowledge, and create a welcoming space for our community. We believe in the power of books to educate, inspire, and transform lives.
+                <div class="grid gap-12 lg:grid-cols-2 items-center">
+                    <div>
+                        <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl mb-4 text-blue-600">Our Mission</h2>
+                        <p class="text-lg text-gray-600 mb-4">
+                            At City Library, our mission is to inspire lifelong learning, advance knowledge, and strengthen our community. We strive to:
                         </p>
+                        <ul class="list-disc list-inside text-gray-600 space-y-2">
+                            <li>Provide free and open access to information and ideas</li>
+                            <li>Foster a love of reading and learning</li>
+                            <li>Embrace diversity and promote inclusivity</li>
+                            <li>Offer innovative programs and services</li>
+                            <li>Preserve and share our community's history</li>
+                        </ul>
                     </div>
-                    <div class="flex justify-center">
-                        <img src="/placeholder.svg?height=400&width=600" alt="Library Interior" class="rounded-lg shadow-md object-cover" width="600" height="400">
+                    <div class="relative">
+                        <img src="img/Library.jpg" alt="City Library Building" class="rounded-lg shadow-md">
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="w-full py-12 md:py-24 lg:py-32 bg-blue-50">
             <div class="container px-4 md:px-6 mx-auto">
                 <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl text-blue-600 text-center mb-8">Our History</h2>
-                <div class="space-y-4 max-w-3xl mx-auto text-center">
-                    <p class="text-gray-600">
-                        Founded in 1950, City Library has been serving our community for over 70 years. What started as a small collection of books in a single room has grown into a comprehensive resource center with over 100,000 items in our catalog.
+                <div class="max-w-3xl mx-auto">
+                    <p class="text-lg text-gray-600 mb-6">
+                        Founded in 1950, City Library has been a cornerstone of our community for over seven decades. What started as a small reading room has grown into a modern, multi-branch system serving thousands of patrons each year.
                     </p>
-                    <p class="text-gray-600">
-                        Throughout the years, we've adapted to changing technologies and community needs, always striving to provide the best possible service to our patrons.
+                    <p class="text-lg text-gray-600 mb-6">
+                        Throughout our history, we've adapted to changing times and technologies while maintaining our commitment to free and equal access to information. From our first bookmobile in the 1960s to our digital collections today, we've continually evolved to meet the needs of our diverse community.
+                    </p>
+                    <p class="text-lg text-gray-600">
+                        Today, City Library stands as a testament to the power of community support and the enduring value of public libraries in the digital age.
                     </p>
                 </div>
             </div>
         </section>
+
         <section class="w-full py-12 md:py-24 lg:py-32 bg-white">
             <div class="container px-4 md:px-6 mx-auto">
-                <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl text-blue-600 text-center mb-12">Our Team</h2>
+                <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl text-blue-600 text-center mb-8">Our Team</h2>
                 <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-                    <div class="flex flex-col items-center space-y-4">
-                        <img src="/placeholder.svg?height=150&width=150" alt="Jane Doe" class="w-32 h-32 rounded-full object-cover">
-                        <h3 class="text-xl font-semibold text-blue-600">Jane Doe</h3>
+                    <div class="text-center">
+                        <img src="img/Jane.jpg" alt="Library Director" class="w-32 h-32 rounded-full mx-auto mb-4">
+                        <h3 class="text-xl font-semibold text-blue-600 mb-2">Jane Smith</h3>
                         <p class="text-gray-600">Library Director</p>
                     </div>
-                    <div class="flex flex-col items-center space-y-4">
-                        <img src="/placeholder.svg?height=150&width=150" alt="John Smith" class="w-32 h-32 rounded-full object-cover">
-                        <h3 class="text-xl font-semibold text-blue-600">John Smith</h3>
+                    <div class="text-center">
+                        <img src="img/John.jpg
+                        " alt="Head Librarian" class="w-32 h-32 rounded-full mx-auto mb-4">
+                        <h3 class="text-xl font-semibold text-blue-600 mb-2">John Doe</h3>
                         <p class="text-gray-600">Head Librarian</p>
                     </div>
-                    <div class="flex flex-col items-center space-y-4">
-                        <img src="/placeholder.svg?height=150&width=150" alt="Emily Brown" class="w-32 h-32 rounded-full object-cover">
-                        <h3 class="text-xl font-semibold text-blue-600">Emily Brown</h3>
+                    <div class="text-center">
+                        <img src="img/Emily.jpg" alt="Community Outreach Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4">
+                        <h3 class="text-xl font-semibold text-blue-600 mb-2">Emily Johnson</h3>
                         <p class="text-gray-600">Community Outreach Coordinator</p>
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="w-full py-12 md:py-24 lg:py-32 bg-blue-50">
+            <div class="container px-4 md:px-6 mx-auto text-center">
+                <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl text-blue-600 mb-4">Get Involved</h2>
+                <p class="text-xl text-gray-600 mb-8">There are many ways to support and get involved with City Library</p>
+                <div class="grid gap-4 md:grid-cols-2 lg:grid-cols-3">
+                    <a href="#" class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow">
+                        <h3 class="text-xl font-semibold text-blue-600 mb-2">Volunteer</h3>
+                        <p class="text-gray-600">Help us serve the community</p>
+                    </a>
+                    <a href="#" class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow">
+                        <h3 class="text-xl font-semibold text-blue-600 mb-2">Donate</h3>
+                        <p class="text-gray-600">Support our programs and collections</p>
+                    </a>
+                    <a href="#" class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow">
+                        <h3 class="text-xl font-semibold text-blue-600 mb-2">Friends of the Library</h3>
+                        <p class="text-gray-600">Join our support organization</p>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section class="w-full py-12 md:py-24 lg:py-32 bg-white">
             <div class="container px-4 md:px-6 mx-auto">
                 <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl text-blue-600 text-center mb-8">Visit Us</h2>
                 <div class="grid gap-6 lg:grid-cols-2 lg:gap-12">
@@ -124,15 +160,19 @@
             </div>
         </section>
     </main>
-    <footer class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t bg-white">
-        <p class="text-xs text-gray-500">© 2024 Acme Library. All rights reserved.</p>
-        <nav class="sm:ml-auto flex gap-4 sm:gap-6">
-            <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Terms of Service</a>
-            <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Privacy</a>
-        </nav>
+
+    <footer class="mt-auto bg-white border-t border-gray-200">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
+            <div class="flex flex-col sm:flex-row justify-between items-center gap-4">
+                <p class="text-sm text-gray-500">© 2024 City Library. All rights reserved.</p>
+                <nav class="flex gap-4 sm:gap-6">
+                    <a class="text-sm hover:underline underline-offset-4 text-blue-600" href="#">Terms of Service</a>
+                    <a class="text-sm hover:underline underline-offset-4 text-blue-600" href="#">Privacy</a>
+                </nav>
+            </div>
+        </div>
     </footer>
-    <script>
-        lucide.createIcons();
-    </script>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
