--- a/catalog.html
+++ b/catalog.html
@@ -1,119 +1,128 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalog - City Library</title>
-    <script src="js/tailwind.js"></script>
-    <link rel="stylesheet" href="css/tailwind.min.css">
-    <script src="js/lucide.min.js"></script>
+    <title>Catalog - Acme Library</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-50">
-    <header class="px-4 lg:px-6 h-16 flex items-center bg-white shadow-sm">
-        <a href="#" class="flex items-center justify-center">
+    <header class="px-4 lg:px-6 h-14 flex items-center bg-white shadow-sm relative z-10">
+        <a href="index.html" class="flex items-center justify-center gap-2">
             <i data-lucide="book-open" class="h-6 w-6 text-blue-600"></i>
-            <span class="text-2xl font-bold tracking-tighter sm:text-2xl ml-3 -mt-1">City Library</span>
+            <span class="text-2xl font-bold tracking-tighter sm:text-2xl ml-1 -mt-1">City Library</span>
         </a>
-        <nav class="ml-auto flex gap-4 sm:gap-6 hidden lg:flex">
-            <a href="index.html"
-                class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Home</a>
-            <a href="catalog.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Catalog</a>
+        <button id="mobile-menu-button" class="ml-auto lg:hidden">
+            <i data-lucide="menu" class="h-6 w-6 text-blue-600"></i>
+        </button>
+        <nav id="desktop-menu" class="hidden lg:flex ml-auto gap-4 sm:gap-6">
+            <a href="index.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Home</a>
+            <a href="catalog.html" class="text-sm font-medium text-blue-600 underline underline-offset-4">Catalog</a>
             <a href="events.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Events</a>
             <a href="about.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">About</a>
         </nav>
-        <!-- Mobile Navigation Menu (Hamburger) -->
-        <button class="lg:hidden flex ml-auto" id="mobile-menu-button">
-            <i class="w-6 h-6 text-blue-600">☰</i>
-        </button>
-        <!-- Mobile Menu (Hidden by default) -->
-        <div id="mobile-menu" class="lg:hidden hidden absolute top-14 right-4 bg-white shadow-lg rounded-lg w-48 p-4">
-            <a href="index.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Home</a>
-            <a href="catalog.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Catalog</a>
-            <a href="events.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Events</a>
-            <a href="about.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">About</a>
-        </div>
     </header>
-    <main class="flex-1 py-6 px-4 md:px-6">
-        <div class="max-w-7xl mx-auto space-y-6">
-            <div class="relative">
-                <input
-                    type="text"
-                    id="searchInput"
-                    placeholder="Search title name here..."
-                    class="w-full h-12 pl-4 pr-12 rounded-lg border border-gray-300 focus:outline-none focus:border-blue-500"
-                >
-                <button 
-                    class="absolute right-2 top-1/2 -translate-y-1/2 bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition-colors"
-                    onclick="handleSearch()"
-                >
-                    Search
-                </button>
+
+    <div id="mobile-menu" class="lg:hidden bg-white shadow-md absolute top-14 left-0 right-0 z-20 hidden">
+        <nav class="flex flex-col p-4">
+            <a href="index.html" class="text-sm font-medium py-2 hover:text-blue-600">Home</a>
+            <a href="catalog.html" class="text-sm font-medium py-2 text-blue-600">Catalog</a>
+            <a href="events.html" class="text-sm font-medium py-2 hover:text-blue-600">Events</a>
+            <a href="about.html" class="text-sm font-medium py-2 hover:text-blue-600">About</a>
+        </nav>
+    </div>
+
+    <div class="bg-gradient-to-r from-blue-500 to-blue-600 text-white py-12">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h1 class="text-3xl font-bold">Library Catalog</h1>
+            <p class="mt-2 text-blue-100">Explore our collection of books and resources</p>
+        </div>
+    </div>
+
+    <main class="flex-1 py-8 px-4 md:px-6">
+        <div class="max-w-7xl mx-auto space-y-8">
+            <div class="bg-white rounded-xl shadow-sm p-6 space-y-6">
+                <div class="relative">
+                    <i data-lucide="search" class="absolute left-4 top-1/2 -translate-y-1/2 h-5 w-5 text-gray-400"></i>
+                    <input
+                        type="text"
+                        id="searchInput"
+                        placeholder="Search by title or author..."
+                        class="w-full h-12 pl-12 pr-4 rounded-lg border border-gray-200 focus:outline-none focus:border-blue-500 focus:ring-1 focus:ring-blue-500"
+                    >
+                </div>
+
+                <div>
+                    <h2 class="text-sm font-medium text-gray-600 mb-3">Filter by Category</h2>
+                    <div class="flex flex-wrap gap-2" id="categoryFilters">
+                        <button 
+                            class="px-4 py-2 rounded-lg bg-blue-600 text-white hover:bg-blue-700 transition-colors"
+                            data-category="all"
+                        >
+                            All Books
+                        </button>
+                        <button 
+                            class="px-4 py-2 rounded-lg bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors"
+                            data-category="basic"
+                        >
+                            Basic
+                        </button>
+                        <button 
+                            class="px-4 py-2 rounded-lg bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors"
+                            data-category="it"
+                        >
+                            IT
+                        </button>
+                        <button 
+                            class="px-4 py-2 rounded-lg bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors"
+                            data-category="cse"
+                        >
+                            CSE
+                        </button>
+                        <button 
+                            class="px-4 py-2 rounded-lg bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors"
+                            data-category="ise"
+                        >
+                            ISE
+                        </button>
+                        <button 
+                            class="px-4 py-2 rounded-lg bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors"
+                            data-category="novel"
+                        >
+                            Novel
+                        </button>
+                        <button 
+                            class="px-4 py-2 rounded-lg bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors"
+                            data-category="fantasy"
+                        >
+                            Fantasy
+                        </button>
+                    </div>
+                </div>
             </div>
 
-            <div class="flex flex-wrap gap-2" id="categoryFilters">
-                <button 
-                    class="px-4 py-2 rounded-full bg-blue-600 text-white hover:bg-blue-700 transition-colors"
-                    data-category="all"
-                >
-                    All
-                </button>
-                <button 
-                    class="px-4 py-2 rounded-full bg-white text-blue-600 hover:bg-blue-50 transition-colors"
-                    data-category="basic"
-                >
-                    Basic
-                </button>
-                <button 
-                    class="px-4 py-2 rounded-full bg-white text-blue-600 hover:bg-blue-50 transition-colors"
-                    data-category="it"
-                >
-                    IT
-                </button>
-                <button 
-                    class="px-4 py-2 rounded-full bg-white text-blue-600 hover:bg-blue-50 transition-colors"
-                    data-category="cse"
-                >
-                    CSE
-                </button>
-                <button 
-                    class="px-4 py-2 rounded-full bg-white text-blue-600 hover:bg-blue-50 transition-colors"
-                    data-category="ise"
-                >
-                    ISE
-                </button>
-                <button 
-                    class="px-4 py-2 rounded-full bg-white text-blue-600 hover:bg-blue-50 transition-colors"
-                    data-category="novel"
-                >
-                    Novel
-                </button>
-                <button 
-                    class="px-4 py-2 rounded-full bg-white text-blue-600 hover:bg-blue-50 transition-colors"
-                    data-category="fantasy"
-                >
-                    Fantasy
-                </button>
-            </div>
+            <div id="resultsInfo" class="text-sm text-gray-600 ml-1"></div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6" id="bookGrid">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6" id="bookGrid">
                 <!-- Books will be dynamically inserted here -->
             </div>
         </div>
     </main>
-    <footer class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t bg-white">
-        <p class="text-xs text-gray-500">© 2024 Acme Library. All rights reserved.</p>
-        <nav class="sm:ml-auto flex gap-4 sm:gap-6">
-            <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Terms of Service</a>
-            <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Privacy</a>
-        </nav>
+
+    <footer class="mt-auto bg-white border-t border-gray-200">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
+            <div class="flex flex-col sm:flex-row justify-between items-center gap-4">
+                <p class="text-sm text-gray-500">© 2024 City Library. All rights reserved.</p>
+                <nav class="flex gap-4 sm:gap-6">
+                    <a class="text-sm hover:underline underline-offset-4 text-blue-600" href="#">Terms of Service</a>
+                    <a class="text-sm hover:underline underline-offset-4 text-blue-600" href="#">Privacy</a>
+                </nav>
+            </div>
+        </div>
     </footer>
 
-    <script src="js/catalog.js">
-    </script>
+    <script src="js/catalog.js"></script>
 </body>
 </html>
