--- a/index.html
+++ b/index.html
@@ -1,45 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>City Library</title>
     <script src="js/tailwind.js"></script>
-    <link rel="stylesheet" href="css/tailwind.min.css">
+    <link href="css/tailwind.min.css" rel="stylesheet">
     <script src="js/lucide.min.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <style>
+        .nav-item {
+            opacity: 0;
+            transform: translateY(-10px);
+            transition: opacity 0.3s ease, transform 0.3s ease;
+        }
+        .nav-item.show {
+            opacity: 1;
+            transform: translateY(0);
+        }
+        #mobile-menu {
+            opacity: 0;
+            transform: translateY(-20px);
+            transition: opacity 0.3s ease, transform 0.3s ease;
+        }
+        #mobile-menu.show {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    </style>
 </head>
-
 <body class="flex flex-col min-h-screen bg-gray-50">
-    <header class="px-4 lg:px-6 h-16 flex items-center bg-white shadow-sm">
-        <a href="#" class="flex items-center justify-center">
+    <header class="px-4 lg:px-6 h-14 flex items-center bg-white shadow-sm relative z-10">
+        <a href="index.html" class="flex items-center justify-center gap-2">
             <i data-lucide="book-open" class="h-6 w-6 text-blue-600"></i>
-            <span class="text-2xl font-bold tracking-tighter sm:text-2xl ml-3 -mt-1">City Library</span>
+            <span class="text-2xl font-bold tracking-tighter sm:text-2xl ml-1 -mt-1">City Library</span>
         </a>
-        <nav class="ml-auto flex gap-4 sm:gap-6 hidden lg:flex">
-            <a href="index.html"
-                class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Home</a>
-            <a href="catalog.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Catalog</a>
-            <a href="events.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Events</a>
-            <a href="about.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">About</a>
-        </nav>
-        <!-- Mobile Navigation Menu (Hamburger) -->
-        <button class="lg:hidden flex ml-auto" id="mobile-menu-button">
-            <i class="w-6 h-6 text-blue-600">☰</i>
+        <button id="mobile-menu-button" class="ml-auto lg:hidden">
+            <i data-lucide="menu" class="h-6 w-6 text-blue-600"></i>
         </button>
-        <!-- Mobile Menu (Hidden by default) -->
-        <div id="mobile-menu" class="lg:hidden hidden absolute top-14 right-4 bg-white shadow-lg rounded-lg w-48 p-4">
-            <a href="index.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Home</a>
-            <a href="catalog.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Catalog</a>
-            <a href="events.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Events</a>
-            <a href="about.html"
-                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">About</a>
-        </div>
+        <nav id="desktop-menu" class="hidden lg:flex ml-auto gap-4 sm:gap-6">
+            <a href="index.html" class="nav-item text-sm font-medium text-blue-600 underline underline-offset-4">Home</a>
+            <a href="catalog.html" class="nav-item text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Catalog</a>
+            <a href="events.html" class="nav-item text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Events</a>
+            <a href="about.html" class="nav-item text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">About</a>
+        </nav>
     </header>
+
+    <div id="mobile-menu" class="lg:hidden bg-white shadow-md absolute top-14 left-0 right-0 z-20 hidden">
+        <nav class="flex flex-col p-4">
+            <a href="index.html" class="text-sm font-medium py-2 text-blue-600">Home</a>
+            <a href="catalog.html" class="text-sm font-medium py-2 hover:text-blue-600">Catalog</a>
+            <a href="events.html" class="text-sm font-medium py-2 hover:text-blue-600">Events</a>
+            <a href="about.html" class="text-sm font-medium py-2 hover:text-blue-600">About</a>
+        </nav>
+    </div>
 
     <main class="flex-1">
         <section class="w-full py-12 md:py-24 lg:py-32 xl:py-48 bg-gradient-to-r from-blue-500 to-blue-600">
@@ -55,28 +68,24 @@
                             </p>
                         </div>
                         <div class="flex flex-col gap-2 min-[400px]:flex-row">
-                            <a href="catalog.html"
-                                class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-white text-blue-600 hover:bg-blue-50 h-10 px-4 py-2">
+                            <a href="catalog.html" class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-white text-blue-600 hover:bg-blue-50 h-10 px-4 py-2">
                                 Explore Catalog
                             </a>
-                            <a href="about.html"
-                                class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-white text-white hover:bg-white hover:text-blue-600 h-10 px-4 py-2">
-                                About Us
+                            <a href="#" class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-white text-white hover:bg-white hover:text-blue-600 h-10 px-4 py-2">
+                                Join Now
                             </a>
                         </div>
                     </div>
-                    <div class="mx-auto flex w-full max-w-[800px] items-center justify-center lg:max-w-none">
-                        <img src="img/Librarian.webp" alt="Library Interior"
-                            class="aspect-video overflow-hidden rounded-xl object-cover object-center" width="850"
-                            height="650">
+                    <div class="mx-auto flex w-full max-w-[400px] items-center justify-center lg:max-w-none">
+                        <img src="img/Librarian.webp" alt="Library Interior" class="aspect-video overflow-hidden rounded-xl object-cover object-center" width="550" height="550">
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="w-full py-12 md:py-24 lg:py-32 bg-white">
             <div class="container px-4 md:px-6 mx-auto">
-                <h2 class="text-3xl font-bold tracking-tighter sm:text-5xl text-center mb-12 text-blue-600">Our Services
-                </h2>
+                <h2 class="text-3xl font-bold tracking-tighter sm:text-5xl text-center mb-12 text-blue-600">Our Services</h2>
                 <div class="grid gap-6 lg:grid-cols-3 lg:gap-12">
                     <div class="flex flex-col items-center text-center space-y-4">
                         <i data-lucide="clock" class="h-12 w-12 text-blue-500"></i>
@@ -89,8 +98,7 @@
                         <i data-lucide="calendar" class="h-12 w-12 text-blue-500"></i>
                         <h3 class="text-xl font-bold text-blue-600">Regular Events</h3>
                         <p class="text-gray-600">
-                            Join our book clubs, author talks, and children's storytimes. There's always something
-                            happening!
+                            Join our book clubs, author talks, and children's storytimes. There's always something happening!
                         </p>
                     </div>
                     <div class="flex flex-col items-center text-center space-y-4">
@@ -103,6 +111,7 @@
                 </div>
             </div>
         </section>
+
         <section class="w-full py-12 md:py-24 lg:py-32 bg-blue-50">
             <div class="container px-4 md:px-6 mx-auto">
                 <h2 class="text-3xl font-bold tracking-tighter sm:text-5xl text-center mb-12 text-blue-600">Featured
@@ -138,24 +147,21 @@
                 </div>
             </div>
         </section>
-        <section class="w-full py-12 md:py-24 lg:py-32 bg-white">
+
+
+        <section class="w-full py-12 md:py-24 lg:py-32 bg-blue-50">
             <div class="container px-4 md:px-6 mx-auto">
                 <div class="flex flex-col items-center justify-center space-y-4 text-center">
                     <div class="space-y-2">
                         <h2 class="text-3xl font-bold tracking-tighter sm:text-5xl text-blue-600">Stay Updated</h2>
-                        <p
-                            class="max-w-[900px] text-gray-600 md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
-                            Sign up for our newsletter to receive updates on new arrivals, events, and special
-                            promotions.
+                        <p class="max-w-[900px] text-gray-600 md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
+                            Sign up for our newsletter to receive updates on new arrivals, events, and special promotions.
                         </p>
                     </div>
                     <div class="w-full max-w-sm space-y-2">
                         <form class="flex space-x-2">
-                            <input
-                                class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 max-w-lg flex-1"
-                                placeholder="Enter your email" type="email">
-                            <button type="submit"
-                                class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-10 px-4 py-2">
+                            <input class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 max-w-lg flex-1" placeholder="Enter your email" type="email">
+                            <button type="submit" class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-10 px-4 py-2">
                                 Subscribe
                             </button>
                         </form>
@@ -167,17 +173,19 @@
             </div>
         </section>
     </main>
-    <footer class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t bg-white">
-        <p class="text-xs text-gray-500">© 2024 City Library. All rights reserved.</p>
-        <nav class="sm:ml-auto flex gap-4 sm:gap-6">
-            <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Terms of Service</a>
-            <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Privacy</a>
-        </nav>
-    </footer>
-    <script src="js/script.js.js"></script>
-    <script>
-        lucide.createIcons();
-    </script>
-</body>
 
+    <footer class="mt-auto bg-white border-t border-gray-200">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
+            <div class="flex flex-col sm:flex-row justify-between items-center gap-4">
+                <p class="text-xs text-gray-500">© 2024 City Library. All rights reserved.</p>
+                <nav class="flex gap-4 sm:gap-6">
+                    <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Terms of Service</a>
+                    <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Privacy</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/script.js"></script>
+</body>
 </html>
